// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table should render 1`] = `
<div>
  <div
    class="-mt-3 Table__TableWrapper-sc-84pst5-0 ccYCKK"
    role="table"
  >
    <table
      cellpadding="0"
      class="table-auto"
    >
      <thead>
        <tr
          class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
          role="row"
        >
          <th
            class="relative p-3 m-0 w-1 text-sm font-semibold text-left select-none first:pl-0 last:pr-0 group text-theme-secondary-500 border-theme-secondary-300 hasBorder dark:text-theme-secondary-700 dark:border-theme-secondary-800"
            colspan="1"
            data-testid="table__th--0"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-row-reverse align-top flex-inline"
            >
              <div>
                Header 1
              </div>
              <div
                class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <div
                  class="transition-transform transform rotate-180 sc-bdfBwQ kJrqvM"
                  height="5"
                  role="img"
                  width="8"
                >
                  <svg>
                    chevron-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </th>
          <th
            class="relative p-3 m-0 text-sm font-semibold text-left select-none first:pl-0 last:pr-0 group text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800"
            colspan="1"
            data-testid="table__th--1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex align-top flex-inline no-border"
            >
              <div>
                Header 2
              </div>
              <div
                class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <div
                  class="transition-transform transform rotate-180 sc-bdfBwQ kJrqvM"
                  height="5"
                  role="img"
                  width="8"
                >
                  <svg>
                    chevron-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </th>
          <th
            class="relative p-3 m-0 text-sm font-semibold text-left select-none first:pl-0 last:pr-0 group text-theme-secondary-500 border-theme-secondary-300 hasBorder dark:text-theme-secondary-700 dark:border-theme-secondary-800"
            colspan="1"
            data-testid="table__th--2"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-row-reverse justify-end align-top flex-inline"
            >
              <div>
                Header 3
              </div>
              <div
                class="flex items-center mr-2 ml-auto opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <div
                  class="transition-transform transform rotate-180 sc-bdfBwQ kJrqvM"
                  height="5"
                  role="img"
                  width="8"
                >
                  <svg>
                    chevron-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr>
          <td>
            1
          </td>
          <td>
            2
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table should render empty rows if template not provided 1`] = `
<div>
  <div
    class="-mt-3 Table__TableWrapper-sc-84pst5-0 ccYCKK"
    role="table"
  >
    <table
      cellpadding="0"
      class="table-auto"
    >
      <thead>
        <tr
          class="border-b border-theme-secondary-300 dark:border-theme-secondary-800"
          role="row"
        >
          <th
            class="relative p-3 m-0 w-1 text-sm font-semibold text-left select-none first:pl-0 last:pr-0 group text-theme-secondary-500 border-theme-secondary-300 hasBorder dark:text-theme-secondary-700 dark:border-theme-secondary-800"
            colspan="1"
            data-testid="table__th--0"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-row-reverse align-top flex-inline"
            >
              <div>
                Header 1
              </div>
              <div
                class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <div
                  class="transition-transform transform rotate-180 sc-bdfBwQ kJrqvM"
                  height="5"
                  role="img"
                  width="8"
                >
                  <svg>
                    chevron-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </th>
          <th
            class="relative p-3 m-0 text-sm font-semibold text-left select-none first:pl-0 last:pr-0 group text-theme-secondary-500 border-theme-secondary-300 dark:text-theme-secondary-700 dark:border-theme-secondary-800"
            colspan="1"
            data-testid="table__th--1"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex align-top flex-inline no-border"
            >
              <div>
                Header 2
              </div>
              <div
                class="flex items-center ml-2 opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <div
                  class="transition-transform transform rotate-180 sc-bdfBwQ kJrqvM"
                  height="5"
                  role="img"
                  width="8"
                >
                  <svg>
                    chevron-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </th>
          <th
            class="relative p-3 m-0 text-sm font-semibold text-left select-none first:pl-0 last:pr-0 group text-theme-secondary-500 border-theme-secondary-300 hasBorder dark:text-theme-secondary-700 dark:border-theme-secondary-800"
            colspan="1"
            data-testid="table__th--2"
            role="columnheader"
            style="cursor: pointer;"
            title="Toggle SortBy"
          >
            <div
              class="flex flex-row-reverse justify-end align-top flex-inline"
            >
              <div>
                Header 3
              </div>
              <div
                class="flex items-center mr-2 ml-auto opacity-0 transition-opacity group-hover:opacity-100 text-theme-secondary-500 dark:text-theme-secondary-700"
              >
                <div
                  class="transition-transform transform rotate-180 sc-bdfBwQ kJrqvM"
                  height="5"
                  role="img"
                  width="8"
                >
                  <svg>
                    chevron-down.svg
                  </svg>
                </div>
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody
        role="rowgroup"
      >
        <tr />
      </tbody>
    </table>
  </div>
</div>
`;
